hphp/test/slow/ir_refcount/refcount001.php.expectf
varray(1) {
  object(stdClass) (0) {
  }
}
varray(1) {
  object(stdClass) (0) {
  }
}
varray(1) {
  object(stdClass) (0) {
  }
}
varray(1) {
  object(stdClass) (0) {
  }
}

Catchable fatal error: Argument 1 passed to X::__construct() must be an instance of %r(HH\\v)?%rarray, string given in %s/test/slow/ir_refcount/refcount001.php on line 18
